--- a/src/app/app-navbar/app-navbar.component.html
+++ b/src/app/app-navbar/app-navbar.component.html
@@ -1,13 +1,32 @@
-<a routerLink="/">Home Page</a>
-<a routerLink="/login">Login Page</a>
-<a routerLink="/article">Article Page</a>
-<a routerLink="/admin">Admin</a>
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <button mat-button routerLink="/">Angular CMS</button>
 
-<div *ngIf="user">
-  <h3>Hello {{user.displayName}}</h3>
-  <img [src]="user.photoURL" >
-  <button (click)="AfService.logout()">Log out</button>
-</div>
+    <span class="example-spacer"></span>
+
+    <button mat-button routerLink="/article">Article Page</button>
+    <button mat-button routerLink="/admin">Admin</button>
+    <div *ngIf="!user">
+      <button mat-button (click)="AfService.loginWithGoogle()">Login</button>
+    </div>
+    <div *ngIf="user">
+      <button mat-button [matMenuTriggerFor]="menu">
+        <span>Hello {{user.displayName}}</span>
+      </button>
+      <mat-menu #menu="matMenu" x-position="after" y-position="below" overlapTrigger="false">
+        <button mat-menu-item disabled>
+          <mat-icon>account_circle</mat-icon>
+          <span>Account Settings</span>
+        </button>
+        <button mat-menu-item (click)="AfService.logout()">
+          <mat-icon>logout</mat-icon>
+          <span>Log out</span>
+        </button>
+      </mat-menu>
+    </div>
+  </mat-toolbar-row>
+</mat-toolbar>
+
 <div *ngIf="user">
   <p>Subscriber: {{user.roles.subscriber}}</p>
   <p>Admin: {{user.roles.admin}}</p>
