--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -1,3 +1,19 @@
 <app-navbar></app-navbar>
-<p>admin-page works!</p>
-<router-outlet></router-outlet>
+<mat-drawer-container class="example-container" autosize>
+    <mat-drawer #drawer class="example-sidenav" mode="side">
+      <mat-nav-list>
+        <mat-list-item *ngFor="let link of links">
+           <span matLine routerLink="/admin/{{link.link}}">{{ link.name }}</span>
+        </mat-list-item>
+      </mat-nav-list>
+    </mat-drawer>
+  
+    <div class="example-sidenav-content">  
+        <button type="button" mat-button (click)="drawer.toggle()">
+          <span class="material-icons">
+            menu
+            </span>
+          </button>
+      <router-outlet></router-outlet>
+    </div>
+  </mat-drawer-container>
