--- a/src/app/admin-page/menus/menus.component.html
+++ b/src/app/admin-page/menus/menus.component.html
@@ -1,1 +1,43 @@
-<p>menus works!</p>
+<div class="example-container">
+  <mat-form-field>
+      <input matInput placeholder="Title" [(ngModel)]="menuDetails.title">
+  </mat-form-field>
+  <mat-form-field>
+      <input matInput placeholder="URL" [(ngModel)]="menuDetails.url">
+  </mat-form-field>
+  <button mat-raised-button color="primary" (click)="addMenus()">Add</button>
+</div>
+
+<div class="example-container1">
+  <div class="example-header-filter">
+    <mat-form-field>
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+    </mat-form-field>
+  </div>
+  
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort>
+
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+        <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="title">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Title </th>
+        <td mat-cell *matCellDef="let row"> {{row.title}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="url">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> URL </th>
+        <td mat-cell *matCellDef="let row"> {{row.url}} </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+      </tr>
+    </table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+  </div>
+</div>
