--- a/src/app/admin-page/menus/menus.component.html
+++ b/src/app/admin-page/menus/menus.component.html
@@ -5,7 +5,7 @@
   <mat-form-field>
       <input matInput placeholder="URL" [(ngModel)]="menuDetails.url">
   </mat-form-field>
-  <button mat-raised-button color="primary" (click)="addMenus()">Add</button>
+  <button mat-raised-button color="primary" (click)="addMenu()">Add</button>
 </div>
 
 <div class="example-container1">
@@ -14,7 +14,7 @@
       <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
     </mat-form-field>
   </div>
-  
+
   <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource" matSort>
 
@@ -33,11 +33,24 @@
         <td mat-cell *matCellDef="let row"> {{row.url}} </td>
       </ng-container>
 
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
+        <td mat-cell *matCellDef="let row">
+          <div class="table-actions">
+            <button mat-icon-button color="primary" (click)="openEditDialog(row.id, row.title, row.url)">
+              <mat-icon aria-label="edit">mode_edit</mat-icon>
+            </button>
+            <button mat-icon-button color="warn" (click)="openDialog(row.id)">
+              <mat-icon aria-label="delete">delete</mat-icon>
+            </button>
+          </div>
+        </td>
+      </ng-container>
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;">
       </tr>
     </table>
-
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
   </div>
-</div>
+</div>      
