--- a/src/app/admin-page/posts/posts.component.html
+++ b/src/app/admin-page/posts/posts.component.html
@@ -1,1 +1,67 @@
-<p>posts works!</p>
+<div class="example-container">
+  <form [formGroup]="postForm">
+    <mat-form-field>
+      <input matInput placeholder="Title" formControlName="title">
+    </mat-form-field>
+    <mat-form-field>
+      <mat-select placeholder="Select Menu" formControlName="menu_id">
+        <mat-option *ngFor="let menu of menusList" [value]="menu.id">{{menu.title}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field>
+      <textarea matInput placeholder="Content" formControlName="content"></textarea>
+    </mat-form-field>
+    <button mat-raised-button color="primary" (click)="addPost()" [disabled]="!postForm.valid">Add</button>
+  </form>
+</div>
+
+<div class="example-container1">
+  <div class="example-header-filter">
+    <mat-form-field>
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+    </mat-form-field>
+  </div>
+
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort>
+
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+        <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="title">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Title </th>
+        <td mat-cell *matCellDef="let row"> {{row.title}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="menu_id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Menu ID </th>
+        <td mat-cell *matCellDef="let row"> {{row.menu_id}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="content">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Content </th>
+        <td mat-cell *matCellDef="let row"> {{row.content}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
+        <td mat-cell *matCellDef="let row">
+          <div class="table-actions">
+            <button mat-icon-button color="primary" (click)="openEditDialog(row.id, row.title, row.menu_id, row.content)">
+              <mat-icon aria-label="edit">mode_edit</mat-icon>
+            </button>
+            <button mat-icon-button color="warn" (click)="openDialog(row.id)">
+              <mat-icon aria-label="delete">delete</mat-icon>
+            </button>
+          </div>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+  </div>
+</div>
