--- a/src/app/front-page/app-navbar/app-navbar.component.html
+++ b/src/app/front-page/app-navbar/app-navbar.component.html
@@ -4,8 +4,10 @@
 
     <span class="example-spacer"></span>
 
+    <div *ngFor="let menu of menusList">
+      <button mat-button routerLink="/pages/{{menu.url}}">{{menu.title}}</button>
+    </div>
     <button mat-button routerLink="/article">Article Page</button>
-    <button mat-button routerLink="/admin">Admin</button>
     <div *ngIf="!user">
       <button mat-button (click)="AfService.loginWithGoogle()">Login</button>
     </div>
@@ -27,7 +29,4 @@
   </mat-toolbar-row>
 </mat-toolbar>
 
-<div *ngIf="user">
-  <p>Subscriber: {{user.roles.subscriber}}</p>
-  <p>Admin: {{user.roles.admin}}</p>
-</div>
+
