Added front-page styling and masonry grid

--- a/src/app/admin-page/posts/posts.component.html
+++ b/src/app/admin-page/posts/posts.component.html
@@ -42,7 +42,7 @@
 
       <ng-container matColumnDef="content">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Content </th>
-        <td mat-cell *matCellDef="let row"> {{row.content}} </td>
+        <td mat-cell *matCellDef="let row"> {{(row.content.length>30)?(row.content | slice:0:30) + '...':row.content}} </td>
       </ng-container>
 
       <ng-container matColumnDef="actions">
