Added content to home page

--- a/src/app/front-page/home-page/home-page.component.html
+++ b/src/app/front-page/home-page/home-page.component.html
@@ -1,1 +1,35 @@
-<p>home-page works!</p>
+<div style="text-align: center;">
+    <h1>
+        Welcome to CMS with Angular 17!
+    </h1>
+    <h2>Whats new in Angular 17</h2>
+    <div class="center-ul">
+        <ul>
+            <li>
+                <h3>New built-in control flow</h3>
+            </li>
+            <li>
+                <h3>Input Signals</h3>
+            </li>
+            <li>
+                <h3>New Router info parameter</h3>
+            </li>
+            <li>
+                <h3>New test runner</h3>
+            </li>
+            <li>
+                <h3>Application builder migration</h3>
+            </li>
+            <li>
+                <h3>Development server shortcuts</h3>
+            </li>
+            <li>
+                <h3>Angular Material support for hydration</h3>
+            </li>
+            <li>
+                <h3>Typescript and Vite updates</h3>
+            </li>
+        </ul>
+    </div>
+    <img width="500" src="https://s3.eu-west-1.amazonaws.com/redsys-prod/articles/679210935de42a1be6065252/images/teaserImage_xxxx_angular_header_1699351460248_1699362954921.png" alt="Angular logo">
+</div>
